<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <TextView
        android:text="@string/book_details"
        style="@style/SupplierHeadingStyle"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="4dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/supplier_name"
            style="@style/CategoryStyle" />
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:layout_weight="4">
            <EditText
                android:id="@+id/edit_book_name"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="4dp"
        android:orientation="horizontal">
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/book_price"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:layout_weight="4">

            <EditText
                android:id="@+id/edit_book_price"
                android:hint="@string/hint_book_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
            <TextView
                android:id="@+id/label_book_price"
                android:text="@string/unit_book_price"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="4dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/quantity"
            style="@style/CategoryStyle" />
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:layout_weight="4">
            <Button
                android:id="@+id/plus_button"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:text="@string/plus"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
               android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
            <EditText
                android:id="@+id/edit_quantity"
                android:hint="@string/quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle"
              android:paddingLeft="@dimen/padding_button"/>
            <Button
                android:id="@+id/minus_button"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:text="@string/minus"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>


        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:text="@string/supplier_details"
        style="@style/SupplierHeadingStyle"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="4dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/supplier_name"
            style="@style/CategoryStyle" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:layout_weight="4">
            <EditText
                android:id="@+id/supplier_name"
                android:hint="@string/supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="4dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/phone_number"
            style="@style/CategoryStyle" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:layout_weight="4">
            <EditText
                style="@style/EditorFieldStyle"
                android:id="@+id/supplier_number"
                android:hint="@string/phone_number"
                android:inputType="phone"/>
            <ImageView
                style="@style/EditorUnitsStyle"
                android:id="@+id/call"
                android:src="@drawable/round_call_black_24"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>

